--- a/yamls/nginx-service.yaml
+++ b/yamls/nginx-service.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: nginx
-  name: nginx
+    app: nginx-argoapp
+  name: nginx-argoapp
   namespace: default
 spec:
   ports:
@@ -11,5 +11,5 @@ spec:
     protocol: TCP
     targetPort: 80
   selector:
-    app: nginx
+    app: nginx-argoapp
   type: NodePort
